# ML-Labs

./: .gitignore  README.md  lab1_GPT.ipynb  pyproject.toml
lab2/: lab2.ipynb  lab2e.py  lab2f.py
lab3 (part 2.1)/: lab3.ipynb
