[project]
name = "ML-handbook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emil G.", email = "gabdulvaleev.emil@mail.ru"},
]
dependencies = [
    "ipykernel>=6.29.5", 
    "numpy==1.26.4", 
    "pandas>=2.2.3", 
    "matplotlib>=3.10.0", 
    "scikit-learn>=1.6.1", 
    "seaborn>=0.13.2", 
    "scipy>=1.15.1", 
    "catboost>=1.2.5", 
    "tqdm>=4.67.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
